<resources>
    <string name="app_name">Pagination Simple</string>
    <string name="error">Bir hata oluştu</string>
    <string name="try_again">Tekrar Dene</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="select_nat">Select Nationalities</string>
    <string name="apply">Apply Filter</string>
    <string name="filter">Filter</string>
    <string name="close">Close</string>
    <string name="reset_all">Reset All</string>
</resources>